# ml-canary-deploy

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  config.py  docker-compose.yml  pyproject.toml  requirements.txt
api/: main.py  schemas.py
canary_cli/: main.py
cli/: main.py
core/: deployment.py  health.py  metrics.py  registry.py  router.py
db/: base.py  models.py
examples/heart_disease/: demo.py
integrations/: sklearn.py
prometheus/: prometheus.yml
scripts/: docker_init.py
store/: blob.py  metadata.py
ui/: app.py
